--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-aiogram==3.15.0
+aiogram==3.4.1
 yt-dlp==2024.12.23
 shazamio==0.6.0
 mutagen==1.47.0
 aiohttp==3.10.11
-Pillow==11.0.0
+aiofiles==23.2.1
+pydantic==1.10.13
+numpy==1.26.4
+Pillow==10.4.0
 python-dotenv==1.0.1
