--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-aiogram==3.4.1
+aiogram==2.25.2
 yt-dlp==2024.12.23
 shazamio==0.6.0
 mutagen==1.47.0
+aiohttp==3.9.5
 aiofiles==23.2.1
 pydantic==1.10.13
 numpy==1.26.4
